src/index.css
/* ... */
/* ----------------- clock ticker ----------------- */

.word,
.alphabet
{
  text-transform: uppercase;
}

.alphabet {
  z-index: 10;
}

.alphabet-clock {
  display: flex;
  /* border: 1px solid pink; */
  overflow: hidden;
  height: 100%;
}

.alphabet-clock p {
  padding: 0;
  line-height: 1;
}

.alphabet-clock .letter-container * {
  font-size: 3rem !important;
}

.letter-container {
  text-align: center;
  /* border: 1px solid green;
  padding: 1rem 2rem; */
}

.test {
  border: 5px solid yellow;
}

.word-container {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  /* border: 1px solid pink; */
  background-color: var(--dark-main);
  z-index: 10;
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: pointer;
  flex-direction: column;
}

.body-container {
  /* display: none; */
  position: inherit;
}

.continue {
  opacity: .2;
  padding: 1rem;
}

/* Blogbox */

.blog-box-container {
  /* border: 1px solid green; */
  min-height: 250px;
}

.blog-box-image {
  max-height: 250px;
  overflow: hidden;
}

.blog-box-info {
  padding: 1rem;
}

.blog-box-text {
  padding: 1rem 0;
}

.blog-item {
  grid-column-start: span 1;
}

.blog-box-categories {
  display: flex;
  justify-content: flex-start;
  gap: 10px;
  flex-wrap: wrap;
}

